# BugFix_Mutli_agent

./: .gitignore  Readme.md  pyproject.toml
dataset/cases/boundary_condition_06/: buggy.py  test_buggy.py
dataset/cases/empty_list_04/: buggy.py  test_buggy.py
dataset/cases/inverted_logic_05/: buggy.py  test_buggy.py
dataset/cases/none_handling_03/: buggy.py  test_buggy.py
dataset/cases/off_by_one_02/: buggy.py  test_buggy.py
dataset/cases/sorting_filtering_07/: buggy.py  test_buggy.py
dataset/cases/string_edge_case_08/: buggy.py  test_buggy.py
dataset/cases/wrong_operator_01/: buggy.py  test_buggy.py
evals/: metrics.py  run_eval.py
optimizer/: optimize_prompt.py
prompts/: optimizer_prompt.txt  system_prompt.txt
scripts/: run_agent.py  run_eval.py  run_optimizer.py  test_connection.py
src/bugfix_agent/: __init__.py  agent.py  config.py  repair_loop.py  result_parser.py  schemas.py  test_runner.py
