[project]
name = "bugfix-agent"
version = "0.1.0"
description = "Test-driven bug fixing agent built with Claude Agent SDK and OpenRouter gateway."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "python-dotenv",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
